--- a/register.html
+++ b/register.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
+
 <HEAD>
 	<meta charset="utf-8">
-	<title>Registration</title>
+	<title>Register</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </HEAD>
+
 <body>
+
   <header>
     <h1>Registration</h1>
     <nav>
@@ -12,30 +16,23 @@
     	Sign up
     </nav>
   </header>
-  <form>
-  <div class="container">
-    <h1>Register</h1>
-    <p>Please fill in this form to create an account.</p>
-    <hr>
-
-    <label for="email"><b>Email</b></label>
-    <input type="text" placeholder="Enter Email" name="email" required>
-
-    <label for="psw"><b>Password</b></label>
-    <input type="password" placeholder="Enter Password" name="psw" required>
-
-    <label for="psw-repeat"><b>Repeat Password</b></label>
-    <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
-    <hr>
-    <input type="radio" name="policy"> I agree to the <a href="#">Terms & cookie policy</a>
-.
-    <button type="submit" class="registerbtn">Register</button>
-  </div>
   
-  <div class="container signin">
-    <p>Already have an account? <a href="#">Sign in</a>.</p>
+  <div class="register">
+    <h1>Sign up</h1>
+    <form>
+      <p>Email</p>
+      <input type="Email" name="" placeholder="Enter email">
+      <p>Password</p>
+      <input type="Password" name="" placeholder="Enter Password">
+      <p>Confirm password</p>
+      <input type="password" name="" placeholder="Confirm Password">
+      <input type="radio" name="">By clicking here you agree to our <a href="#">Terms & Privacy</a>.
+      <hr>
+      <input type="submit" name= "" value="Submit">
+    </form>
   </div>
-</form>
+
 
 </body>
+
 </html>
