--- a/register.html
+++ b/register.html
@@ -9,13 +9,14 @@
 
 <body>
 
-  <header>
-    <h1>Registration</h1>
-    <nav>
-    	Sign in
-    	Sign up
-    </nav>
-  </header>
+  <div class="header">
+  <a href="#default" class="logo">CompanyLogo</a>
+  <div class="header-right">
+    <a class="active" href="#home">Home</a>
+    <a href="#contact">Contact</a>
+    <a href="#about">About</a>
+  </div>
+</div>
   
   <div class="register">
     <h1>Sign up</h1>
