--- a/register.html
+++ b/register.html
@@ -9,30 +9,36 @@
 
 <body>
 
-  <div class="header">
-  <a href="#default" class="logo">CompanyLogo</a>
-  <div class="header-right">
-    <a class="active" href="#home">Home</a>
-    <a href="#contact">Contact</a>
-    <a href="#about">About</a>
-  </div>
-</div>
+  <header class="header">
+    <a href="#default" class="logo">CompanyLogo</a>
+    <div class="header-right">
+      <a class="active" href="#home">Home</a>
+      <a href="#contact">Contact</a>
+      <a href="#about">About</a>
+    </div>
+  </header>
   
   <div class="register">
     <h1>Sign up</h1>
-    <form>
+    <form action="search.html">
       <p>Email</p>
       <input type="Email" name="" placeholder="Enter email">
       <p>Password</p>
       <input type="Password" name="" placeholder="Enter Password">
       <p>Confirm password</p>
       <input type="password" name="" placeholder="Confirm Password">
+      <br>
+      <br>
       <input type="radio" name="">By clicking here you agree to our <a href="#">Terms & Privacy</a>.
       <hr>
-      <input type="submit" name= "" value="Submit">
+      <input type="submit" value="Submit">
     </form>
   </div>
 
+  <hr style="margin: 0px;">
+  <footer class="footer">
+    <p>Copyright &copy; Bilaval Sharma 2018</p>
+  </footer>
 
 </body>
 
