--- a/search.html
+++ b/search.html
@@ -23,26 +23,25 @@
     <input type="text" name="search" placeholder="Search..">
   </form>
 
-  <p>Filters:</p>
-
-  <nav role="navigation">
-  <ul>
-    <li><a href="#">Distance</a></li>
-    <li><a href="#">Price</a>
-      <ul class="dropdown">
-        <li><div class="slidecontainer">
-        <input type="range" min="1" max="100" value="50"></li>
-      </ul>
-    </li>
-    <li><a href="#">Ratings</a>
-      <ul class="dropdown">
-        <li><a href="#">Sub-1</a></li>
-        <li><a href="#">Sub-2</a></li>
-        <li><a href="#">Sub-3</a></li>
-      </ul>
-    </li>
-  </ul>
-  </nav>
+  <div class="navbar">
+    <ul>
+      <li>Distance
+        <ul>
+          <li>1km</li>
+          <li>5km</li>
+          <li>10km</li>
+        </ul>
+      </li>
+      <li>Ratings
+        <ul>
+          <li>3 stars</li>
+          <li>4 stars</li>
+          <li>5 stars</li>
+        </ul>
+      </li>
+      <li>Price</li>
+    </ul>
+  </div>
 
   <footer class="footer">
     <p>Copyright &copy; Bilaval Sharma 2018</p>
