Done with most of the stuff

--- a/search.html
+++ b/search.html
@@ -4,7 +4,7 @@
 <HEAD>
 	<meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Register</title>
+	<title>Search</title>
   <link rel="stylesheet" type="text/css" href="style.css">
 </HEAD>
 
@@ -27,7 +27,7 @@
   
     <section id="site_heading">
       <div class="container">
-        <h1>Find nearest and affordable parking spot</h1>
+        <h1>Find nearest and affordable parking spots</h1>
       </div>
     </section>
 
@@ -58,9 +58,9 @@
             <!-- Put a slider later(js) -->
             <button class="dropbtn">Price</button>
             <div class="dropdown-content">
-              <a href="#">Link 1</a>
-              <a href="#">Link 2</a>
-              <a href="#">Link 3</a>
+              <a href="#">$1- $5</a>
+              <a href="#">$5- $10</a>
+              <a href="#">> $10</a>
             </div>
           </div>
         </div>
