--- a/results.html
+++ b/results.html
@@ -24,29 +24,27 @@
         </nav>
       </div>
     </header>
-  
+   
+
     <div class="vertical-menu">
         <a href="#" class="active">Results</a>
-        <a href="#">Link 1</a>
-        <p>1280 Main St. West</p>
+        <a href="parking.html" target="_balnk">Result 1</a>
+        <p class="spot_name">McMaster University Parking Lot C</p>
         <p>Price: $6/hr</p>
         <p>200 m</p>
-        <a href="#">Link 2</a>
-        <p>1280 Main St. West</p>
+        <a href="parking.html" target="_blank">Result 2</a>
+        <p class="spot_name">McMaster University Parking Lot G</p>
+        <p>Price: $4/hr</p>
+        <p>300 m</p>
+        <a href="parking.html" target="_blank">Result 3</a>
+        <p class="spot_name">McMaster University Parking Lot P</p>
         <p>Price: $6/hr</p>
-        <p>200 m</p>
-        <a href="#">Link 3</a>
-        <p>1280 Main St. West</p>
-        <p>Price: $6/hr</p>
-        <p>200 m</p>
-        <a href="#">Link 4</a>
-        <p>1280 Main St. West</p>
-        <p>Price: $6/hr</p>
-        <p>200 m</p>
+        <p>250 m</p>
     </div>
 
 
     <div class="result_map">
+      <!-- Taken from https://www.google.com/maps/search/parking+near+mcmaster+university/@43.2666342,-79.9184351,16.48z -->
       <img src="result_map.png">
     </div>
 
