--- a/search.html
+++ b/search.html
@@ -34,7 +34,7 @@
     <section id="searchbar">
       <div class="container">
         <h1>Search parking spots</h1>
-        <form action="results.html">
+        <form action="results.html" target="_blank">
           <input type="text" placeholder="Search...">
           <button type="submit" class="search_button">Search</button>
         </form>
