Fix the button css

--- a/search.html
+++ b/search.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Search</title>
   <link rel="stylesheet" type="text/css" href="style.css">
+  <script type="text/javascript" src="javascript.js"></script>
 </HEAD>
 
 <body>
@@ -38,6 +39,7 @@
     <form action="results.html" target="_blank">
       <input type="text" placeholder="Search...">
       <button type="submit" class="search_button">Search</button>
+      <button type="submit" id="locationButton" onclick="getLocation()">Use my location to search</button>
     </form>
   </div>
 </section>    
