--- a/submission.html
+++ b/submission.html
@@ -31,7 +31,7 @@
 <div class="register_container">
 <h1>Find nearest and affordable parking spots</h1>
 <hr>
-<form action="/action_page.php">
+<form action="/action_page.php" name="register_form2" onsubmit="return validateForm2()">
   <div class="container">
     <h1 style="color: black;">Submit a location</h1>
     <p>Please fill in this form to submit a parking location.</p>
@@ -44,11 +44,13 @@
     <input type="text" placeholder="Enter Description" name="description" required>
 
     <p><b>Coordinates</b></p>
-    <input type="text" placeholder="Coordinates" name="coordinates" required>
+    <input type="text" placeholder="Coordinates" name="coordinates" id="coord" required>
     <hr>
 
+    <button type="submit" id="locationButton" onclick="getLocationSubmission()">Use my location to update coordinates</button>
+
     <p><b>Upload an image of the location</b></p>
-    <input type="file" name="pic" accept="image/*">
+    <input type="file" name="pic" accept="image/*" required>
   </div>
 
   <button type="submit" class="registerbtn">Submit</button>
